<resources>
    <string name="app_name">nmedia</string>
    <string name="hello">NMedia!</string>
    <string name="likes" translatable="false">500</string>
    <string name="share" translatable="false">15</string>
    <string name="views" translatable="false">3к</string>
    <string name="author" translatable="false">Нетология. Университет интернет-профессий будущего</string>
    <string name="published" translatable="false">21 мая в 21:39</string>
    <string name="content" translatable="false">Обратите внимание на блок с количеством просмотров. С ним есть небольшая проблема (поскольку он расположен справа). Если количество просмотров вырастет, например, до 500, то есть целых два варианта: 1)Отталкиваться от текста (т.е. установить фиксированное расстояние от текста до границы родителя, а саму иконку приклеить к границе текста) 2)Оставить достаточное количество места, чтобы уместилось и 500 и 1К, тогда на всех карточках положение этого блока будет одинаковым. Вам нужно провести небольшое исследование и посмотреть, каким образом это реализовано в Vk.</string>
</resources>