<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/barrierTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_netology"
        android:contentDescription="Аватар" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        android:text="@string/author"
         />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@+id/barrierTop"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/author"
        android:text="@string/published" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        android:text="@string/content" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu_24"
        android:contentDescription="меню"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="icLikes,icShare,icViews" />

    <ImageButton
        android:id="@+id/icLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:padding="@dimen/icon_padding"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:srcCompat="@drawable/ic_likes_24"
        android:contentDescription="Лайк"/>

    <ImageButton
        android:id="@+id/icShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="@dimen/icon_padding"
        app:layout_constraintStart_toEndOf="@id/icLikes"
        app:layout_constraintTop_toTopOf="@id/barrierBottom"
        app:srcCompat="@drawable/ic_baseline_share_24"
        android:layout_marginStart="@dimen/common_share"
        android:contentDescription="Поделиться"/>

    <ImageButton
        android:id="@+id/icViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:background="@android:color/transparent"
        android:padding="@dimen/icon_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrierBottom"
        app:srcCompat="@drawable/ic_views_eye_24"
        android:contentDescription="Просмотры" />

    <TextView
        android:id="@+id/amtViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/icViews"
        app:layout_constraintStart_toEndOf="@id/icViews"
        app:layout_constraintTop_toTopOf="@id/icViews"
        android:text="@string/views" />

    <TextView
        android:id="@+id/amtShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/icShare"
        app:layout_constraintStart_toEndOf="@id/icShare"
        app:layout_constraintTop_toTopOf="@id/icShare"
        android:text="@string/share" />

    <TextView
        android:id="@+id/amtLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/icLikes"
        app:layout_constraintStart_toEndOf="@id/icLikes"
        app:layout_constraintTop_toTopOf="@id/icLikes"
        android:text="@string/likes" />


</androidx.constraintlayout.widget.ConstraintLayout>